--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "wp-content/themes/centreofexcellence"]
 	path = wp-content/themes/centreofexcellence
-	url = git@github.com:ministryofjustice/wp-centreofexcellence.git
+	url = https://github.com/ministryofjustice/wp-centreofexcellence.git
