Use centreofexcellence parent theme as a composer package instead of a git submodule.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ services:
   wordpress:
     build: .
     volumes:
-      - .:/bedrock
+#      - .:/bedrock
+      - ./web/app/uploads:/bedrock/web/app/uploads
     env_file: .env
     environment:
       WP_ENV: development
