--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ web/app/upgrade
 web/app/languages
 web/app/uploads/*
 !web/app/uploads/.gitkeep
+web/app/themes/wp-centreofexcellence
 
 # WordPress
 web/wp
