Add plugin ministryofjustice/wp-rewrite-media-to-s3

--- a/composer.json
+++ b/composer.json
@@ -50,6 +50,7 @@
     "roots/wp-password-bcrypt": "1.0.0",
     "acf/advanced-custom-fields-pro": "^5",
     "wpackagist-plugin/google-analytics-dashboard-for-wp": "^5",
+    "ministryofjustice/wp-rewrite-media-to-s3": "^0.1.0",
     "ministryofjustice/wp-centreofexcellence": "dev-master"
   },
   "require-dev": {
