--- a/composer.json
+++ b/composer.json
@@ -44,12 +44,12 @@
     "php": ">=5.6",
     "composer/installers": "~1.2.0",
     "vlucas/phpdotenv": "^2.0.1",
-    "johnpbloch/wordpress": "~4.7.4",
-    "koodimonni-language/core-en_gb": "~4.7.4",
+    "johnpbloch/wordpress": "*",
+    "koodimonni-language/core-en_gb": "*",
     "oscarotero/env": "^1.0",
     "roots/wp-password-bcrypt": "1.0.0",
-    "acf/advanced-custom-fields-pro": "^5",
-    "wpackagist-plugin/google-analytics-dashboard-for-wp": "^5",
+    "acf/advanced-custom-fields-pro": "*",
+    "wpackagist-plugin/google-analytics-dashboard-for-wp": "*",
     "ministryofjustice/wp-rewrite-media-to-s3": "^0.1.0",
     "ministryofjustice/wp-centreofexcellence": "dev-master"
   },
