--- a/composer.json
+++ b/composer.json
@@ -51,8 +51,7 @@
     "acf/advanced-custom-fields-pro": "*",
     "wpackagist-plugin/google-analytics-dashboard-for-wp": "*",
     "wpackagist-plugin/classic-editor": "*",
-    "ministryofjustice/wp-rewrite-media-to-s3": "^0.1.0",
-    "ministryofjustice/wp-centreofexcellence": "dev-master"
+    "ministryofjustice/wp-rewrite-media-to-s3": "^0.1.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.5.1"
