--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # This should match the VIRTUAL_HOST environment variable for the wordpress service in docker-compose.yml
-WP_HOME=http://appname.docker
-WP_SITEURL=http://appname.docker/wp
-SERVER_NAME=appname.docker
+WP_HOME=http://accountingcofe.docker
+WP_SITEURL=http://accountingcofe.docker/wp
+SERVER_NAME=accountingcofe.docker
 
 # Generate your keys here: https://roots.io/salts.html
 AUTH_KEY=saltykey
