--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # This should match the VIRTUAL_HOST environment variable for the wordpress service in docker-compose.yml
-WP_HOME=http://accountingcofe.docker
-WP_SITEURL=http://accountingcofe.docker/wp
+WP_HOME=http://accountingcofe.docker       # <- still necessary?
+WP_SITEURL=http://accountingcofe.docker/wp # <- still necessary?
 SERVER_NAME=accountingcofe.docker
 
 # Generate your keys here: https://roots.io/salts.html
