--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
     "acf/advanced-custom-fields-pro": "*",
     "wpackagist-plugin/google-analytics-dashboard-for-wp": "*",
     "wpackagist-plugin/classic-editor": "*",
-    "ministryofjustice/wp-rewrite-media-to-s3": "^0.1.0"
+    "ministryofjustice/wp-rewrite-media-to-s3": "^0.1.0",
+    "ministryofjustice/wp-moj-components": "*"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.5.1"
