--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,9 @@
     "wpackagist-plugin/google-analytics-dashboard-for-wp": "*",
     "wpackagist-plugin/classic-editor": "*",
     "ministryofjustice/wp-rewrite-media-to-s3": "^0.1.0",
-    "ministryofjustice/wp-moj-components": "*"
+    "ministryofjustice/wp-moj-components": "*",
+    "ministryofjustice/cookie-compliance-for-wordpress": "*"
+
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.5.1"
