--- a/web/app/themes/accounting/package.json
+++ b/web/app/themes/accounting/package.json
@@ -18,27 +18,22 @@
         }
     ],
     "dependencies": {
-        "ajv": "^6.10.0",
-        "cross-env": "^5.2.0",
         "debounce": "^1.2.0",
-        "details-element-polyfill": "^2.0.1",
-        "govuk_frontend_toolkit": "^8.1.0",
-        "imagemin": "^6.1.0",
-        "jquery": "^3.4.1",
-        "marked": "^0.7.0",
-        "npm": "^6.10.2",
-        "scrollpoints": "^0.4.0",
-        "url-search-params-polyfill": "^4.0.0",
-        "vue-template-compiler": "^2.5.16"
+        "govuk_frontend_toolkit": "^9.0.0",
+        "jquery": "^3.4.1"
     },
     "devDependencies": {
         "browser-sync": "^2.26.7",
-        "browser-sync-webpack-plugin": "^2.0.1",
-        "laravel-mix": "^4.0.14",
-        "node-sass": "^4.11.0",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.17.2",
-        "sass-loader": "^7.1.0"
+        "browser-sync-webpack-plugin": "^2.2.2",
+        "cross-env": "^5.2.1",
+        "details-element-polyfill": "^2.4.0",
+        "laravel-mix": "^4.1.4",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.22.12",
+        "sass-loader": "^7.3.1",
+        "scrollpoints": "^0.4.0",
+        "url-search-params-polyfill": "^6.0.0",
+        "vue-template-compiler": "^2.6.11"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
